--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="house insurance, home insurance Australia, property protection, insurance comparison, best home coverage">
     <title>Compare House Insurance Quotes in Australia</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://prettygracia.github.io/sd-life-wealth-insurance2/">
+    <meta name="google-site-verification" content="vQmSYckz8pc7RaA1C71jtqMpoVBqF6KSmc3ANvqtJzc" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2Q84K5LNJT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2Q84K5LNJT');
+</script>
 </head>
 <body>
     <header>
